# alfagames-timer

./: .prettierrc  app.config.ts  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
components/: AppAside.vue  AppResume.vue  AppTimer.vue  ConfigurationTimeForm.vue  CustomTimeForm.vue  MainPanel.vue
components/app/: Aside.vue  Modals.vue  Resume.vue  TimerPanel.vue
components/console/: Nintendo.vue  PlayStation.vue  Xbox.vue
components/logo/: Nintendo.vue  PlayStation.vue  Xbox.vue
components/settings/: NotificationSound.vue  Ringtone.vue  TimeConfiguration.vue
components/timer/: New.vue  index.vue
components/topbar/: AppIndicator.vue  Settings.vue
composables/: useAppTimer.ts  useInterval.ts
layouts/: default.vue
pages/: index.vue  settings.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
stores/: app.ts  consoles.ts  sounds.ts
types/: app.d.ts
utils/: Time.ts  Validate.ts  getIcon.ts  getLogo.ts  getSongs.ts  playSound.ts  tauri.ts  time.ts  validate.ts
