[package]
name = "app"
version = "0.1.7"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = [ "fs-create-dir", "fs-read-dir", "path-all", "http-request", "updater", "devtools"] }
rodio = "0.17.2"
reqwest = { version = "0.11.22", features = ["blocking"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "0.18.2", features = ["v2_2"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.19.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
